# big-data-technology

./: .gitignore  README.md  pyproject.toml
src/: data.py  metrics.py  optimizer.py  run_backtest.py
src/minvar_l2/: __init__.py  backtest.py  covariance.py
src/portfolio_opt/: covariance.py  data.py  features.py
tests/: test_backtest.py  test_covariance.py  test_data.py  test_metrics.py  test_optimizer.py
