[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "minvar-l2"
version = "0.1.0"
description = "Minimum variance portfolio optimization with L2 regularization"
authors = [
    {name = "Minxi Lin"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "yfinance",
    "pytest",
    "pytest-cov"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]